# openhay

./: .editorconfig  CODE_OF_CONDUCT.md  README.md  index.html  llms-full.txt  llms.txt
backend/: .env  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  db.py  db_init.py  db_schema.sql  env.example  models.py  pyproject.toml  settings.py
backend/api/: main.py
backend/api/routers/: auth.py  chat.py  contact.py  featured.py  health.py  metrics.py  research.py  support.py  translate.py
backend/api/routers/models/: requests.py  responses.py
backend/core/: __init__.py  auth.py  middleware.py  mixins.py  models.py  utils.py
backend/core/agents/chat/: agent.py  deps.py  prompts.py
backend/core/agents/discover/: README.md  agent.py  prompts.py
backend/core/agents/research/: README.md  agent.py  citation.py  deps.py  prompts.py
backend/core/agents/translate/: agent.py  deps.py  prompts.py
backend/core/repositories/: __init__.py  article.py  article_source.py  base.py  conversation.py  daily_suggestion.py  message.py
backend/core/services/: __init__.py  base.py  chat.py  email.py  llm_invoker.py  ratelimit.py  streaming.py  translate.py  web_discovery.py
backend/core/tools/: search.py
backend/data/: sapnhap.json  sapnhap.py
backend/docker/: docker-compose.dev.yml
backend/docker/scripts/postgres/: database-creating.sh
frontend/: Caddyfile  README.md  env.example  index.html  nixpacks.toml  package-lock.json  package.json  railway.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AttachmentList.tsx  ChatMessage.tsx  Markdown.tsx  PromptInput.tsx  SourceCard.tsx  SupportModal.tsx
src/components/: PromptInput.tsx
(+18 files in other folders)
